fix: improve open api spec validation
